--- a/backOffice/areaAdministrativa/doadores.html
+++ b/backOffice/areaAdministrativa/doadores.html
@@ -14,7 +14,6 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
-    <!-- <link rel="stylesheet" href="./css/w3.css"> -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,13 +24,13 @@
   </head>
   <body>
     <!-- 
-		Começo Menu
-	-->
+		  Começo Menu
+	  -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-green p-3 mb-lg-4">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Logo</a>
+        <img class="logo navbar-brand" src="./imgs/logo.png">
 
-		<!-- Add the toggle button for mobile -->
+		  <!--  Botão para mostrar o menu nos telemóveis -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar" aria-controls="mynavbar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -39,26 +38,29 @@
         <div class="collapse navbar-collapse" id="mynavbar">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link current" href="#">Link</a>
+              <a class="nav-link" href="administradores.html">Administradores</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="entidades.html">Entidades Benefeciadoras</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link current" href="#">Doadores</a>
             </li>
           </ul>
 
-          <form class="d-flex">
-            <input class="form-control me-2" type="text" placeholder="Search" />
-            <button class="btn btn-primary" type="button">Search</button>
-          </form>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="logout.php">
+                    <i class="material-icons d-block" style="color: white;">logout</i>
+                </a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
     <!-- 
-		Fim Menu
-	-->
+		  Fim Menu
+	  -->
 
     <!--
 		Alerta de dados modificados
@@ -126,17 +128,17 @@
         <tbody>
           <tr>
             <th scope="row"></th>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>sdfsdfsfsdfsdfsdf</td>
+            <td>sdfsdfsfsdfsdfsdf</td>
+            <td>sdfsdfsfsdfsdfsdf</td>
+            <td>sdfsdfsfsdfsdfsdf</td>
+            <td>sdfsdfsfsdfsdfsdf</td>
+            <td>sdfsdfsfsdfsdfsdf</td>
+            <td>sdfsdfsfsdfsdfsdf</td>
+            <td>sdfsdfsfsdfsdfsdf</td>
+            <td>sdfsdfsfsdfsdfsdf</td>
+            <td>sdfsdfsfsdfsdfsdf</td>
+            <td>sdfsdfsfsdfsdfsdf</td>
             <td>
               <a
                 onclick="return confirmar();"
