update para usar o mvc pattern

--- a/backOffice/areaAdministrativa(TEMPORARIO)/doadores.html
+++ b/backOffice/areaAdministrativa(TEMPORARIO)/doadores.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Listar Visitas</title>
+    <title>Área de Administração</title>
 
     <meta charset="UTF-8" />
-    <meta name="description" content="Listagem das visitas" />
+    <meta name="description" content="Área de Administração" />
     <meta name="author" content="Grupo 7" />
     <link rel="shortcut icon" href="./Imagens/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
