--- a/backOffice/areaAdministrativa(TEMPORARIO)/entidades.html
+++ b/backOffice/areaAdministrativa(TEMPORARIO)/entidades.html
@@ -4,7 +4,7 @@
     <title>Listar Visitas</title>
 
     <meta charset="UTF-8" />
-    <meta name="description" content="Listagem das visitas" />
+    <meta name="description" content="Área de Administração" />
     <meta name="author" content="Grupo 7" />
     <link rel="shortcut icon" href="./Imagens/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -38,10 +38,10 @@
         <div class="collapse navbar-collapse" id="mynavbar">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link current" href="#">Administradores</a>
+              <a class="nav-link" href="administradores.html">Administradores</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="entidades.html">Entidades Benefeciadoras</a>
+              <a class="nav-link current" href="#">Entidades Benefeciadoras</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="doadores.html">Doadores</a>
@@ -55,7 +55,6 @@
                 </a>
             </li>
           </ul>
-        
         </div>
       </div>
     </nav>
@@ -64,8 +63,8 @@
 	  -->
 
     <!--
-		  Alerta de dados modificados
-	  -->
+		Alerta de dados modificados
+	-->
     <div class="alert alert-success alert-dismissible fade show">
       <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
       Dados eliminados com sucesso!
