--- a/backOffice/public/form_esquecer_senha.html
+++ b/backOffice/public/form_esquecer_senha.html
@@ -1,12 +1,12 @@
 <html>
     <head>
       <meta charset="UTF-8">
-      <link rel="shortcut icon" href="./imagens/favicon.png"> <!-- Favicon -->
+      <link rel="shortcut icon" href="./images/favicon.png"> <!-- Favicon -->
       <meta name="Description" content="Formulário para introduzir o e-mail de recuperação">
       <meta name="viewport" content="width=device-width, initial-scale=1">
         
       <title>Login</title>
-      <link rel="stylesheet" href="./css/login.css">
+      <link rel="stylesheet" href="./stylesheets/login/login.css">
         
     </head>
 
@@ -17,7 +17,7 @@
             <div class="form">
 
               <form class="login-form" name="form_login" action="" method="POST">
-                <img src="imagens/user.png" class="pa-0" id="icon"/><br>
+                <img src="./images/login/user.png" class="pa-0" id="icon"/><br>
 
                 <p>Introduza o seu e-mail de recuperação</p>
                 <input type="email" name="email" id="email" placeholder="Email" required/>
