--- a/backOffice/public/login_administrador.html
+++ b/backOffice/public/login_administrador.html
@@ -1,13 +1,13 @@
 <html>
     <head>
       <meta charset="UTF-8">
-      <link rel="shortcut icon" href="./imagens/favicon.png"> <!-- Favicon -->
+      <link rel="shortcut icon" href="./images/favicon.png"> <!-- Favicon -->
       <meta name="Description" content="LogIn">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
         
       <title>Login</title>
-      <link rel="stylesheet" href="./css/login.css">
+      <link rel="stylesheet" href="./stylesheets/login/login.css">
         
     </head>
 
@@ -18,7 +18,7 @@
             <div class="form">
 
               <form class="login-form" name="form_login" action="" method="POST">
-                <img src="imagens/user.png" class="pa-0" id="icon"/>
+                <img src="./images/login/user.png" class="pa-0" id="icon"/>
 
                 <input type="text" name="nome" id="nome" placeholder="Utilizador" required/>
 
